@@ -36,7 +36,7 @@ public class Gee.ReadOnlyCollection<G> : Object, Iterable<G>, Collection<G> {
 
 	private Collection<G> _collection;
 
-	public ReadOnlyCollection (Collection<G> collection = null) {
+	public ReadOnlyCollection (Collection<G>? collection = null) {
 		this.collection = collection;
 	}
 
@@ -77,7 +77,7 @@ public class Gee.ReadOnlyCollection<G> : Object, Iterable<G>, Collection<G> {
 			return false;
 		}
 
-		public G get () {
+		public G? get () {
 			return null;
 		}
 	}
