@@ -36,7 +36,7 @@ public class Gee.ReadOnlySet<G> : Object, Iterable<G>, Collection<G>, Set<G> {
 
 	private Set<G> _set;
 
-	public ReadOnlySet (Set<G> set = null) {
+	public ReadOnlySet (Set<G>? set = null) {
 		this.set = set;
 	}
 
@@ -77,7 +77,7 @@ public class Gee.ReadOnlySet<G> : Object, Iterable<G>, Collection<G>, Set<G> {
 			return false;
 		}
 
-		public G get () {
+		public G? get () {
 			return null;
 		}
 	}
